chore: minor content changes

--- a/index.html
+++ b/index.html
@@ -107,9 +107,6 @@
                             <p>
                                 I am also currently a Junior Full-Stack developer at <a href="https://verto.health/" target="_blank" class="text-emphasis">Verto Health</a>.
                             </p>
-                            <p>
-                                You can view my old site <a href="/old.html" target="_blank" rel="noreferrer" class="text-emphasis">here</a>.
-                            </p>
                         </span>
                     </div>
                 </div>
@@ -167,7 +164,7 @@
                         <div class="text-center margin-center" style="padding:4%; width: 100%;">
                             <span>
                                 <p>
-                                    Here are some of the skills I've gained while working at Iseehear, from personal projects, and through school.
+                                    Here are some of the skills I've gained while working at Verto, Iseehear, from personal projects, and through school.
                                 </p>
                             </span>
                         </div>
